# hx2lrs-solns

exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/10_as_casting/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/09_assoc_vs_generic/src/: lib.rs
exercises/04_traits/11_copy/src/: lib.rs
exercises/04_traits/12_drop/src/: lib.rs
exercises/04_traits/13_outro/src/: lib.rs
exercises/05_ticket_v2/03_variants_with_data/src/: lib.rs
exercises/05_ticket_v2/04_if_let/src/: lib.rs
exercises/05_ticket_v2/06_fallibility/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/08_error_enums/src/: lib.rs
exercises/05_ticket_v2/09_error_trait/src/: lib.rs
exercises/05_ticket_v2/13_try_from/src/: lib.rs
exercises/08_futures/08_outro/: .env.example  .gitignore  Cargo.toml  README.md  Secrets.toml.example  test.sh  tickets_schema.sql
exercises/08_futures/08_outro/.sqlx/: query-2bd7f9752d1604437e76ae9c853a40fa5ad3e57411867b9e165780160b912d6c.json  query-d8f6d366c6416491072517dc9aa7918871992e8ea3fff809537ba9bb94e9495a.json
exercises/08_futures/08_outro/migrations/: 20240801224105_create-tickets-table.sql
exercises/08_futures/08_outro/src/: main.rs  ticket.rs  title.rs
exercises/08_futures/08_outro/src/ticket/: description.rs  status.rs  title.rs
(+28 files in other folders)
